Style alignemnt fix

--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -8,12 +8,12 @@ html body {
 }
 
 .content {
-	width:62%;
+	width:65%;
 	float:left;
 }
 
 .nav {
-	width:27%;
+	width:30%;
 	float:right;
 }
 
